Convert readthedocs links for their .org -> .io migration for hosted projects

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -3,4 +3,6 @@
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
-    android:viewportHeight
+    android:viewportHeight="108">
+    <path
+        
