--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -6,4 +6,4 @@
     android:viewportHeight="108">
     <path
         android:fillType="evenOdd"
-        android:pa
+        android:pathData="M32,6
