--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -11,4 +11,4 @@
         android:strokeColor="#00000000">
         <aapt:attr name="android:fillColor">
             <gradient
-          
+                android:endX="7
