Update Icelandic translation

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -12,4 +12,4 @@
         <aapt:attr name="android:fillColor">
             <gradient
                 android:endX="78.5885"
-         
+                android:endY
