--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -13,4 +13,5 @@
             <gradient
                 android:endX="78.5885"
                 android:endY="90.9159"
-                android:st
+                android:startX="48.7653"
+     
