.......... [ZBX-954] coding style fixes

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -14,4 +14,4 @@
                 android:endX="78.5885"
                 android:endY="90.9159"
                 android:startX="48.7653"
-     
+                android:startY=
