--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -17,4 +17,4 @@
                 android:startY="61.0927"
                 android:type="linear">
                 <item
-                 
+                    android:color="#44
