--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -23,4 +23,5 @@
                     android:color="#00000000"
                     android:offset="1.0" />
             </gradient>
-       
+        </aapt:attr>
+    
