--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -28,4 +28,4 @@
     <path
         android:fillColor="#FFFFFF"
         android:fillType="nonZero"
-        android:pathData="M
+        android:pathData="M66.94,46.02L66.
