--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http:/
+<LinearLayout xmlns:android="http://schemas.android.com/
