--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,4 @@
     android:layout_height="match_parent"
     android:background="#91752A"
     android:orientation="vertical"
-    tool
+    tools:context=".Main
