--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,5 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="matc
+        android:layout_width="match_parent"
+    
