--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,4 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-    
+        android:layout_height="wra
