--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#855017"
-        android:ba
+        android:backgroundTint="#855017
