--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,4 @@
         android:layout_height="wrap_content"
         android:background="#855017"
         android:backgroundTint="#855017"
-        andro
+        android:fontFamily="se
