--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,5 @@
         android:layout_height="wrap_content"
         android:background="#855017"
         android:backgroundTint="#855017"
-        android:fontFamily="se
+        android:fontFamily="serif"
+        andr
