--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,4 @@
         android:background="#855017"
         android:backgroundTint="#855017"
         android:fontFamily="serif"
-        andr
+        android:contentDescri
