--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,5 @@
         android:background="#855017"
         android:backgroundTint="#855017"
         android:fontFamily="serif"
-        android:contentDescription="@string/tit
+        android:contentDescription="@string/title"
+        andr
