nohz: Fix idle ticks in cpu summary line of /proc/stat

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,4 @@
         android:backgroundTint="#855017"
         android:fontFamily="serif"
         android:contentDescription="@string/title"
-        andr
+        android:lineSpacingExtra="8sp"
