Small documentation improvements

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,3 +17,4 @@
         android:fontFamily="serif"
         android:contentDescription="@string/title"
         android:lineSpacingExtra="8sp"
+        android:textAlig
