update jquery version

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,4 @@
         android:contentDescription="@string/title"
         android:lineSpacingExtra="8sp"
         android:textAlignment="center"
-        android:t
+        android:textColor="#F0DB
