--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,5 @@
         android:lineSpacingExtra="8sp"
         android:textAlignment="center"
         android:textColor="#F0DB80"
-        android:
+        android:textSize="50sp"
+   
