Update Travis build

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,5 @@
         android:text="@string/title"/>
 
     <ImageView
-        android:id="@+id/toss
+        android:id="@+id/toss_Image"
+        android:l
