--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,4 @@
     <ImageView
         android:id="@+id/toss_Image"
         android:layout_width="match_parent"
-        and
+        android:layout_height="500
