--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,5 @@
         android:id="@+id/toss_Image"
         android:layout_width="match_parent"
         android:layout_height="500sp"
-        android:contentDescription="@string/tossImage
+        android:contentDescription="@string/tossImage"
+        app:srcC
