--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,6 @@
         android:layout_width="match_parent"
         android:layout_height="500sp"
         android:contentDescription="@string/tossImage"
-        app:srcCompat="@drawable/foregroun
+        app:srcCompat="@drawable/foreground" />
+
+    <Butt
