Fix debug message

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,5 @@
         android:contentDescription="@string/tossImage"
         app:srcCompat="@drawable/foreground" />
 
-    <Butt
+    <Button
+        android:i
