--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,5 @@
         app:srcCompat="@drawable/foreground" />
 
     <Button
-        android:id="@+id/toss_Button
+        android:id="@+id/toss_Button"
+        android:lay
