--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,5 @@
 
     <Button
         android:id="@+id/toss_Button"
-        android:layout_width="matc
+        android:layout_width="match_parent"
+        a
