--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,4 +32,4 @@
     <Button
         android:id="@+id/toss_Button"
         android:layout_width="match_parent"
-        a
+        android:layout_height="
