msm: perf: tracectr: Initialize cnts after hotplug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="#865017"
-   
+        android:fontFami
