--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,4 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#865017"
         android:fontFamily="serif"
-       
+        android:textAlignment
