Some work on updating the documentation in preparation for the 0.5 release (#1047).

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,5 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#865017"
         android:fontFamily="serif"
-        android:textAlignment
+        android:textAlignment="center"
+        andr
