Prep for new release

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,5 @@
         android:backgroundTint="#865017"
         android:fontFamily="serif"
         android:textAlignment="center"
-        andr
+        android:textColor="#FAE889"
+    
