--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,4 @@
         android:fontFamily="serif"
         android:textAlignment="center"
         android:textColor="#FAE889"
-    
+        android:textSize="35sp"
