--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,5 @@
         android:textAlignment="center"
         android:textColor="#FAE889"
         android:textSize="35sp"
-        android:contentDescription="@string/tos
+        android:contentDescription="@string/tossButton"
+       
