Pontoon: Update Portuguese (pt-BR) localization of Thimble

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,5 @@
         android:textColor="#FAE889"
         android:textSize="35sp"
         android:contentDescription="@string/tossButton"
-        android:text="@string/tossBut
+        android:text="@string/tossButton"/>
+</LinearLayou
