--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,4 +40,4 @@
         android:textSize="35sp"
         android:contentDescription="@string/tossButton"
         android:text="@string/tossButton"/>
-</LinearLayou
+</LinearLayout>
