iteration of RTL

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+   
